Korrigiere Fehler beim Anzeigen des Fragebogens, wenn der Pfad im Usernamen ein Leerzeichen enthält.